--- a/StressTesting/Packages/manifest.json
+++ b/StressTesting/Packages/manifest.json
@@ -7,12 +7,14 @@
     "com.unity.collections": "0.0.9-preview.20",
     "com.unity.entities": "0.0.12-preview.33",
     "com.unity.jobs": "0.0.7-preview.13",
+    "com.unity.mathematics": "1.1.0",
     "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.purchasing": "2.0.6",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.0.2",
+    "nuget.mono-cecil": "0.1.6-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
